--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,37 @@
  box-sizing: border-box;
  margin: 0;
  padding: 0;
+ font-family: 'Roboto', sans-serif;
  }
 
 .clearfix::after {
  content: "";
  display: table;
  clear: both;
- } 
+ }
+
+/* Header */
+.background{
+  background-color: #f4f9fd;
+  height: 80px;
+  border-bottom: 1px solid black;
+}
+.container {
+  width: 70%;
+  margin: auto;
+}
+.top li {
+  display: inline-block;
+  list-style: none;
+  line-height: 80px;
+  color: #32495b;
+}
+#space {
+  margin-left: 20px;
+  margin-right: 20px;
+  font-size: 25px;
+  font-weight: bolder;
+}
+.contact {
+  float: left;
+}
