--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@
 }
 .container2 {
   padding-top: 80px;
-  width: 60%;
+  width: 50%;
   margin: auto;
   padding-bottom: 40px;
 }
@@ -151,4 +151,69 @@
   color: #33475b;
   text-align: center;
   line-height: 1.6
+}
+
+.background-white {
+  -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  -moz-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  height: 400px;
+  border: 1px solid #e6ecf1;
+  background-color: #ffffff;
+
+}
+.book-left {
+  float: left;
+  width: 30%
+}
+.book-left img {
+  padding-top: 100px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.book-left button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding: 20px;
+}
+.crm {
+  float: left;
+  width: 60%;
+}
+.crm h2 {
+  font-size: 29px;
+  color: #33475b;
+  padding-top: 100px;
+  padding-bottom: 20px;
+}
+.crm p {
+  font-size: 18px;
+  color: #33475b;
+  padding-bottom: 20px;
+}
+.crm h3 {
+  display: inline-block;
+  color: #33475b;
+  font-size: 20px;
+  padding-right: 20px;
+}
+.crm hr {
+  color: #899397;
+  display: inline-block;
+  width: 74%;
+}
+.crm li {
+  padding-top: 100px;
+  padding-right: 20px;
+  display: inline-block;
+  list-style: none;
+  color: #33475b;
+}
+.crm .fa-check-circle {
+  color: #fe775a;
 }
