--- a/css/style.css
+++ b/css/style.css
@@ -217,3 +217,67 @@
 .crm .fa-check-circle {
   color: #fe775a;
 }
+/* Widget */
+.widget{
+  padding-top: 50px;
+}
+.box {
+  float: left;
+  width: 32%;
+  margin-left: 2%;
+  text-align: center;
+}
+.left {
+  -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  -moz-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  background-color: #ffffff;
+  margin-left: 0;
+}
+.center {
+  -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  -moz-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  background-color: #ffffff;
+}
+.right {
+  -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  -moz-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  box-shadow: inset 0px 0px 12px -1px #e6ecf1;
+  background-color: #ffffff;
+}
+.box img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.box h2 {
+  padding: 20px 0px;
+}
+.box p {
+  font-size: 18px;
+  margin: auto;
+  width: 80%;
+  line-height: 1.8;
+  padding-bottom: 100px;
+}
+.box hr {
+  margin: auto;
+  width: 80%;
+}
+.box h3 {
+  padding-top: 40px;
+}
+.box ul {
+  list-style: none;
+  padding: 0;
+  text-align: left;
+  padding-top: 20px;
+}
+
+.box .fa-check-circle {
+  color: #fe775a;
+  padding-left: 40px;
+  padding-right: 20px;
+}
