--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@
   line-height: 1.6
 }
 
-.background-white {
+.background-shadow {
   -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
   -moz-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
   box-shadow: inset 0px 0px 12px -1px #e6ecf1;
