--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ body {
 /* Header */
       /* <!-- Search and contact --> */
 .background-blue{
-  /* position: fixed; */
-  /* width: 100%; */
+  position: fixed;
+  width: 100%;
   background-color: #f4f9fd;
   height: 80px;
   border-bottom: 1px solid black;
@@ -27,9 +27,7 @@ body {
   width: 70%;
   margin: auto;
 }
-.top {
 
-}
 .top li {
   display: inline-block;
   list-style: none;
@@ -42,6 +40,7 @@ body {
   font-size: 25px;
   font-weight: bolder;
 }
+
 .contact {
   float: left;
   width: 50%;
@@ -63,6 +62,8 @@ body {
   border-radius: 7px;
   color: #fe775a;
   font-size: 17px;
+  cursor: pointer;
+
 }
 .generic {
   margin-top: 20px;
@@ -74,12 +75,15 @@ body {
   color: #ffffff;
   font-size: 17px;
   font-weight: 400;
+  cursor: pointer;
 }
       /* <!-- Search and contact --> */
 /* sottointestazione logo */
 .background-white{
-  height: 90px;
+  padding-top: 80px;
+  height: 170px;
   color: #fff;
+
 }
 #contlogo {
   margin-top: 20px;
@@ -103,7 +107,7 @@ body {
   background-image: url(../img/jumbotron.png);
   background-repeat: no-repeat;
   background-size:cover;
-  background-position: bottom right;
+  background-position: top right;
 }
 .presentation {
   width: 50%;
@@ -234,6 +238,7 @@ body {
   width: 32%;
   margin-left: 2%;
   text-align: center;
+  height: 760px;
 }
 .left {
   -webkit-box-shadow: inset 0px 0px 12px -1px #e6ecf1;
@@ -289,13 +294,15 @@ body {
   padding-left: 40px;
   padding-right: 20px;
 }
-
+.left img {
+  height: 200px;
+}
 .center img {
-  width:260px;
+  height: 200px;
 }
 
 .right img {
-  width: 180px;
+  height: 200px;
 }
 .box .generic {
   padding: 10px 30px;
@@ -423,11 +430,18 @@ body {
   width: 70%;
   margin: auto;
 }
-.adv .logo-adv img {
-float: left;
+.logo-adv {
+  float: left;
+  vertical-align: middle;
   width: 150px;
+  height: 100px;
+
+}
+.adv .logo-adv img {
+
   padding-left: 20px;
   margin-top: 20px;
+  width: 100%
 
 }
 .last-button {
@@ -524,7 +538,20 @@ padding-top: 30px;
 /* footer */
 
 /* popup */
-
+.popchat {
+  position: fixed;
+  bottom: 15%;
+  right: 1%;
+  background-color: white;
+  display: block;
+  width: 200px;
+  height: 100px;
+  background-color: White;
+  border: 1px solid white;
+  border-radius: 5%;
+  color: #687786;
+  padding: 10px;
+}
 .popup {
   color: white;
   position: fixed;
