--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,16 @@ padding-top: 30px;
   border-radius: 5%;
   color: #687786;
   padding: 10px;
+  -webkit-box-shadow: 0px 0px 14px 1px rgba(120,120,120,1);
+  -moz-box-shadow: 0px 0px 14px 1px rgba(120,120,120,1);
+  box-shadow: 0px 0px 14px 1px rgba(120,120,120,1);
+}
+.popoption {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: black;
+  cursor: pointer;
 }
 .popup {
   color: white;
@@ -565,4 +575,5 @@ padding-top: 30px;
   border-radius: 100%;
   margin-right: 20px;
   margin-bottom: 20px;
+  cursor: pointer;
 }
