--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,32 @@ body {
   width: 70%;
   margin: auto;
 }
-
+.dropbtn {
+  background-color: #f4f9fd;
+  color: #33475b;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+.dropdowncontent {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border: 1px solid #33475b;
+  border-radius: 5%;
+}
+.dropdowncontent a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown:hover .dropdowncontent {
+  display: block;
+}
 .top li {
   display: inline-block;
   list-style: none;
@@ -576,4 +601,16 @@ padding-top: 30px;
   margin-right: 20px;
   margin-bottom: 20px;
   cursor: pointer;
+}
+
+.poppic {
+  background-image: url(https://static.hsappstatic.net/bots-ui-app/ex/bot-avatar.jpg);
+  height: 50px;
+  width: 50px;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: -10px;
 }
